Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dimalgui by beoran</title>
+    <title>Dmglfa by beoran</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,26 +15,26 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Dimalgui</h1>
-        <p>Direct Mode Allegro Gui</p>
+        <h1>Dmglfa</h1>
+        <p>Direct Mode Gui Library For Allegro</p>
 
-        <p class="view"><a href="https://github.com/beoran/dimalgui">View the Project on GitHub <small>beoran/dimalgui</small></a></p>
+        <p class="view"><a href="https://github.com/beoran/dmglfa">View the Project on GitHub <small>beoran/dmglfa</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/beoran/dimalgui/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/beoran/dimalgui/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/beoran/dimalgui">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/beoran/dmglfa/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/beoran/dmglfa/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/beoran/dmglfa">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h1>
-<a id="dimagui---a-direct-mode-allegro-gui" class="anchor" href="#dimagui---a-direct-mode-allegro-gui" aria-hidden="true"><span class="octicon octicon-link"></span></a>DIMAGUI - a DIrect Mode ALlegro GUI</h1>
+<a id="dmglfa---a-direct-mode-gui-library-for-allegro" class="anchor" href="#dmglfa---a-direct-mode-gui-library-for-allegro" aria-hidden="true"><span class="octicon octicon-link"></span></a>DMGLFA - a Direct Mode Gui Library For Allegro</h1>
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>Dimalgui is a direct mode guid for Allegro 5 written in C, under construction. Direct mode GUIs are much like immediate mode GUI's in API, but they retain more state and defer the drawing to a later stage.</p>
+<p>DMGLFA is a direct mode gui library for Allegro 5 written in C, under construction. Direct mode GUIs are much like immediate mode GUI's in API, but they retain more state and defer the drawing to a later stage.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/beoran">beoran</a></p>
